// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-button #render should render danger button 1`] = `
<gux-button accent="danger">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button id="button-i" type="button" class="gux-danger">
      <slot>
      </slot>
    </button>
  </template>Button
</gux-button>
`;

exports[`gux-button #render should render default button 1`] = `
<gux-button>
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button id="button-i" type="button" class="gux-secondary">
      <slot>
      </slot>
    </button>
  </template>Button
</gux-button>
`;

exports[`gux-button #render should render disabled danger button 1`] = `
<gux-button accent="danger" disabled="">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button id="button-i" type="button" disabled="" class="gux-danger">
      <slot>
      </slot>
    </button>
  </template>Button
</gux-button>
`;

exports[`gux-button #render should render disabled default button 1`] = `
<gux-button disabled="">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button id="button-i" type="button" disabled="" class="gux-secondary">
      <slot>
      </slot>
    </button>
  </template>Button
</gux-button>
`;

exports[`gux-button #render should render disabled ghost button 1`] = `
<gux-button accent="ghost" disabled="">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button id="button-i" type="button" disabled="" class="gux-ghost">
      <slot>
      </slot>
    </button>
  </template>Button
</gux-button>
`;

exports[`gux-button #render should render disabled inline button 1`] = `
<gux-button accent="inline" disabled="">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button id="button-i" type="button" disabled="" class="gux-inline">
      <slot>
      </slot>
    </button>
  </template>Button
</gux-button>
`;

exports[`gux-button #render should render disabled invalid button 1`] = `
<gux-button accent="invalid" disabled="">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button id="button-i" type="button" disabled="" class="gux-invalid">
      <slot>
      </slot>
    </button>
  </template>Button
</gux-button>
`;

exports[`gux-button #render should render disabled primary button 1`] = `
<gux-button accent="primary" disabled="">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button id="button-i" type="button" disabled="" class="gux-primary">
      <slot>
      </slot>
    </button>
  </template>Button
</gux-button>
`;

exports[`gux-button #render should render disabled secondary button 1`] = `
<gux-button accent="secondary" disabled="">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button id="button-i" type="button" disabled="" class="gux-secondary">
      <slot>
      </slot>
    </button>
  </template>Button
</gux-button>
`;

exports[`gux-button #render should render disabled tertiary button 1`] = `
<gux-button accent="tertiary" disabled="">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button id="button-i" type="button" disabled="" class="gux-tertiary">
      <slot>
      </slot>
    </button>
  </template>Button
</gux-button>
`;

exports[`gux-button #render should render ghost button 1`] = `
<gux-button accent="ghost">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button id="button-i" type="button" class="gux-ghost">
      <slot>
      </slot>
    </button>
  </template>Button
</gux-button>
`;

exports[`gux-button #render should render inline button 1`] = `
<gux-button accent="inline">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button id="button-i" type="button" class="gux-inline">
      <slot>
      </slot>
    </button>
  </template>Button
</gux-button>
`;

exports[`gux-button #render should render invalid button 1`] = `
<gux-button accent="invalid">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button id="button-i" type="button" class="gux-invalid">
      <slot>
      </slot>
    </button>
  </template>Button
</gux-button>
`;

exports[`gux-button #render should render primary button 1`] = `
<gux-button accent="primary">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button id="button-i" type="button" class="gux-primary">
      <slot>
      </slot>
    </button>
  </template>Button
</gux-button>
`;

exports[`gux-button #render should render secondary button 1`] = `
<gux-button accent="secondary">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button id="button-i" type="button" class="gux-secondary">
      <slot>
      </slot>
    </button>
  </template>Button
</gux-button>
`;

exports[`gux-button #render should render tertiary button 1`] = `
<gux-button accent="tertiary">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button id="button-i" type="button" class="gux-tertiary">
      <slot>
      </slot>
    </button>
  </template>Button
</gux-button>
`;
